--- a/app/src/main/res/layout/activity_manage_group.xml
+++ b/app/src/main/res/layout/activity_manage_group.xml
@@ -8,9 +8,8 @@
 
     <ListView
         android:id="@+id/group_listview"
-        android:layout_width="374dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button4"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
