--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -1,70 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".app.SignUpActivity">
-
-    <RelativeLayout
-        android:id="@+id/monitoring_relative_layout"
-        android:layout_width="match_parent"
-        android:layout_height="255dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-
-        android:layout_below="@+id/monitored_relative_layout"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/add_monitoring_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="25dp"
-            android:layout_marginEnd="25dp"
-            android:text="@string/add"
-            android:textSize="24sp" />
-
-        <ListView
-            android:id="@+id/monitoring_listview"
-            android:layout_width="match_parent"
-            android:layout_height="203dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/monitoring_txtview"
-            android:layout_marginTop="8dp" />
-
-        <TextView
-            android:id="@+id/monitoring_txtview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="21dp"
-            android:text="@string/monitoring"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/empty_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="88dp" />
-
-    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/monitored_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="255dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
         android:orientation="vertical">
 
         <Button
@@ -108,4 +55,52 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/monitoring_relative_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/add_monitoring_btn"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="25dp"
+            android:text="@string/add"
+            android:textSize="24sp" />
+
+        <ListView
+            android:id="@+id/monitoring_listview"
+            android:layout_width="match_parent"
+            android:layout_height="203dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/monitoring_txtview"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/monitoring_txtview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21dp"
+            android:text="@string/monitoring"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/empty_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="88dp" />
+
+    </RelativeLayout>
+
+</LinearLayout>
