--- a/app/src/main/res/layout/activity_add_monitored.xml
+++ b/app/src/main/res/layout/activity_add_monitored.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,17 +10,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/find_user_edit_txt2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="170dp"
+        android:layout_below="@+id/find_user_edit_txt2"
         android:text="@string/get_monitored" />
 
     <EditText
         android:id="@+id/find_user_edit_txt2"
-        android:layout_width="306dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="109dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:hint="@string/user_email_hint"
         android:inputType="textEmailAddress"
@@ -32,9 +30,8 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/find_user_edit_txt2"
         android:layout_alignStart="@+id/find_user_edit_txt2"
-        android:layout_marginTop="68dp"
         android:text="@string/input_user_email"
         android:textSize="18sp" />
 </RelativeLayout>
