--- a/app/src/main/res/layout/activity_add_monitoring.xml
+++ b/app/src/main/res/layout/activity_add_monitoring.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,11 +7,11 @@
 
     <EditText
         android:id="@+id/find_user_edit_txt"
-        android:layout_width="306dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="109dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:hint="@string/user_email_hint"
         android:inputType="textEmailAddress"
@@ -23,9 +22,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/find_user_edit_txt"
         android:layout_alignStart="@+id/find_user_edit_txt"
-        android:layout_marginTop="68dp"
         android:text="@string/input_user_email"
         android:textSize="18sp" />
 
@@ -34,8 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/find_user_edit_txt"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="170dp"
+        android:layout_below="@+id/find_user_edit_txt"
         android:text="@string/monitor" />
 
 </RelativeLayout>
