--- a/app/src/main/res/layout/activity_add_monitored.xml
+++ b/app/src/main/res/layout/activity_add_monitored.xml
@@ -5,33 +5,44 @@
     android:layout_height="match_parent"
     tools:context=".app.AddMonitoredActivity">
 
-    <Button
-        android:id="@+id/get_monitored_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/find_user_edit_txt2"
-        android:layout_below="@+id/find_user_edit_txt2"
-        android:text="@string/get_monitored" />
-
-    <EditText
-        android:id="@+id/find_user_edit_txt2"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:hint="@string/user_email_hint"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="135dp" />
+        android:padding="25dp">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/find_user_edit_txt2"
-        android:layout_alignStart="@+id/find_user_edit_txt2"
-        android:text="@string/input_user_email"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="25dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/input_user_email"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/find_user_edit_txt2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:ems="10"
+                android:hint="@string/user_email_hint"
+                android:inputType="textEmailAddress"
+                tools:layout_editor_absoluteX="28dp"
+                tools:layout_editor_absoluteY="135dp" />
+
+            <Button
+                android:id="@+id/get_monitored_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/get_monitored" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
