--- a/app/src/main/res/layout/activity_add_monitoring.xml
+++ b/app/src/main/res/layout/activity_add_monitoring.xml
@@ -5,34 +5,43 @@
     android:layout_height="match_parent"
     tools:context=".app.AddMonitoringActivity">
 
-    <EditText
-        android:id="@+id/find_user_edit_txt"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:hint="@string/user_email_hint"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="135dp" />
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/find_user_edit_txt"
-        android:layout_alignStart="@+id/find_user_edit_txt"
-        android:text="@string/input_user_email"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="25dp">
 
-    <Button
-        android:id="@+id/add_monitoring_user_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/find_user_edit_txt"
-        android:layout_below="@+id/find_user_edit_txt"
-        android:text="@string/monitor" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/input_user_email"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/find_user_edit_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:ems="10"
+                android:hint="@string/user_email_hint"
+                android:inputType="textEmailAddress"
+                tools:layout_editor_absoluteX="28dp"
+                tools:layout_editor_absoluteY="135dp" />
+
+            <Button
+                android:id="@+id/add_monitoring_user_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/monitor" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
