--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -56,9 +56,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
+                    android:editable="false"
                     android:ems="10"
                     android:hint="@string/birth_month"
-                    android:inputType="date" />
+                    android:inputType="none" />
 
                 <EditText
                     android:id="@+id/userInfoBirthYear"
@@ -66,9 +67,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
+                    android:editable="false"
                     android:ems="10"
                     android:hint="@string/birth_year"
-                    android:inputType="date" />
+                    android:inputType="none" />
             </LinearLayout>
 
             <EditText
@@ -76,45 +78,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/address_sign_up"
-                android:inputType="textPersonName" />
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/userInfoHomePhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/home_phone_sign_up"
-                android:inputType="phone" />
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/userInfoCellPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/cell_phone_sign_up"
-                android:inputType="phone" />
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/userInfoGrade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/grade_students_sign_up"
-                android:inputType="textPersonName" />
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/userInfoTeacher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/teacher_students_sign_up"
-                android:inputType="textPersonName" />
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/userInfoEmergencyContact"
@@ -122,9 +129,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/emergency_contact_info_sign_up"
-                android:inputType="textPersonName" />
+                android:inputType="none" />
         </LinearLayout>
     </ScrollView>
 
