--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="5dp">
 
     <TextView
@@ -19,4 +19,13 @@
         android:layout_below="@+id/group_name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textSize="14sp" />
+
+    <Switch
+        android:id="@+id/toggleWalk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:text="Start walking" />
+
 </RelativeLayout>
