--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -6,14 +6,14 @@
 
     <TextView
         android:id="@+id/group_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:id="@+id/group_id"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/group_name"
@@ -26,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:text="Start walking" />
+        android:focusable="false"
+        android:padding="5dp"
+        android:text="Start walking  " />
 
 </RelativeLayout>
