Debugging for why more in-depth infor on all users who monitor them does NOT show up.

--- a/app/src/main/res/layout/group_detail_list_view.xml
+++ b/app/src/main/res/layout/group_detail_list_view.xml
@@ -23,11 +23,18 @@
             android:layout_height="match_parent"
             android:baselineAligned="false"
             android:textSize="10sp" />
+
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/monitor_users_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/groupDetailUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp" />
+
 </LinearLayout>
