Walking Groups part1 is fully done, deleted some extra codes.

--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -9,9 +9,9 @@
         android:id="@+id/groupNameDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
+        android:layout_marginStart="43dp"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/groupNameDetail"
-            android:padding="15dp" />
+            android:padding="25dp" />
 
         <ListView
             android:id="@+id/parentUserList"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/groupNameDetail"
-            android:padding="15dp"/>
+            android:padding="25dp"/>
     </LinearLayout>
 
 </RelativeLayout>
