Updated various UI elements to make them more aesthetically pleasing.

--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -30,19 +30,21 @@
 
         <ListView
             android:id="@+id/groupUserList"
-            android:layout_width="189dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/groupNameDetail"
+            android:layout_weight="1"
             android:padding="25dp" />
 
         <ListView
             android:id="@+id/parentUserList"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/groupNameDetail"
-            android:padding="25dp"/>
+            android:layout_weight="1"
+            android:padding="25dp" />
     </LinearLayout>
 
 </RelativeLayout>
