--- a/app/src/main/res/layout/activity_manage_group.xml
+++ b/app/src/main/res/layout/activity_manage_group.xml
@@ -11,11 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/group_listview"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/groupsToolbar" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/groupsToolbar"
+        android:layout_margin="15dp">
+
+        <ListView
+            android:id="@+id/group_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/groupsToolbar" />
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
