Deleted unnecessary activities.

--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -28,6 +28,6 @@
         android:layout_centerVertical="true"
         android:focusable="false"
         android:padding="5dp"
-        android:text="Start walking  " />
+        android:text="@string/walk" />
 
 </RelativeLayout>
