--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,6 @@
                 android:id="@+id/emailEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/loginTitle"
-                android:layout_centerHorizontal="true"
                 android:layout_margin="8dp"
                 android:ems="10"
                 android:hint="@string/emailEdit"
@@ -32,8 +30,6 @@
                 android:id="@+id/passEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/emailEdit"
-                android:layout_centerHorizontal="true"
                 android:layout_margin="8dp"
                 android:ems="10"
                 android:hint="@string/password"
@@ -43,10 +39,8 @@
                 android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/passEdit"
-                android:layout_centerHorizontal="true"
                 android:layout_margin="0dp"
-                android:text="Log In" />
+                android:text="@string/log_in" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
