Messaging mostly done, only 3 bugs left

--- a/app/src/main/res/layout/toolbar_navigation.xml
+++ b/app/src/main/res/layout/toolbar_navigation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linkToolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -58,16 +59,47 @@
             android:text="Monitoring"
             android:textSize="13sp" />
 
-        <Button
-            android:id="@+id/messagesLink"
-            style="@android:style/Widget.DeviceDefault.Button.Borderless"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
             android:layout_weight="1"
-            android:alpha=".7"
-            android:padding="0dp"
-            android:text="Messages"
-            android:textSize="13sp" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/messagesLink"
+                style="@android:style/Widget.DeviceDefault.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:alpha=".7"
+                android:padding="0dp"
+                android:text="Messages"
+                android:textSize="13sp"
+                map:layout_constraintBottom_toBottomOf="parent"
+                map:layout_constraintEnd_toEndOf="parent"
+                map:layout_constraintStart_toStartOf="parent"
+                map:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/unreadMessagesLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                map:layout_constraintBottom_toBottomOf="parent"
+                map:layout_constraintEnd_toEndOf="@+id/messagesLink"
+                map:layout_constraintHorizontal_bias="1.0"
+                map:layout_constraintStart_toStartOf="@+id/messagesLink"
+                map:layout_constraintTop_toTopOf="parent"
+                map:layout_constraintVertical_bias="0.0" />
+        </android.support.constraint.ConstraintLayout>
+
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
