--- a/app/src/main/res/layout/messages_layout.xml
+++ b/app/src/main/res/layout/messages_layout.xml
@@ -24,5 +24,13 @@
         android:layout_alignParentTop="true"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
+    <TextView
+        android:id="@+id/message_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/message_header"
+        android:layout_alignTop="@+id/message_header"
+        android:layout_below="@+id/message_context"
+        android:textSize="14sp" />
 
 </RelativeLayout>
