Can now see unread messages from Parents Dashboard
Now, the user can see unread messages from Parent's Dashboard,
as well as access it easily.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/mapsLinkToolbar"
+        android:id="@+id/parentLinkToolbar"
         layout="@layout/toolbar_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -16,7 +16,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/mapsLinkToolbar"
+        android:layout_below="@+id/parentLinkToolbar"
         tools:context=".app.MapsActivity" />
 
 </RelativeLayout>
