Can now sort users depending on total points earned.

--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -21,8 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/leaderboard"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:text="Your Score: 0" />
+        android:layout_marginBottom="10dp" />
 
     <ListView
         android:id="@+id/leaderboard_list"
