User can now spend points in the store (if they have enough)!

--- a/app/src/main/res/menu/action_bar_dashboard.xml
+++ b/app/src/main/res/menu/action_bar_dashboard.xml
@@ -10,7 +10,10 @@
         android:title="@string/account_info" />
     <item
         android:id="@+id/leaderboard_button"
-        android:title="Leaderboard" />
+        android:title="@string/leaderboard" />
+    <item
+        android:id="@+id/rewards_shop"
+        android:title="@string/rewards_shop" />
     <item
         android:id="@+id/logOutButton"
         android:title="@string/log_out" />
